# django-db-schema-doc

./: .gitignore  LICENSE  README.md  pyproject.toml
.github/workflows/: deploy-pages.yml  publish.yml  schema-docs.yml  tests.yml
db_schema_doc/: __init__.py  apps.py  business_rules.py  collector.py  erd_bundle.py  models_meta.py  query_examples.py  schema_search.py  serialization.py  writer.py
db_schema_doc/diff/: __init__.py  compare.py  report.py
db_schema_doc/exporters/: __init__.py  ai_export.py  dbml.py  examples_export.py  graph.py  json_export.py
db_schema_doc/frontend/: README.md  index.html  package-lock.json  package.json  vite.config.js  vite.config.ts
db_schema_doc/frontend/src/: App.tsx  constants.ts
db_schema_doc/frontend/src/context/: GraphContext.tsx
db_schema_doc/frontend/src/hooks/: useDarkMode.ts  useErdGraph.ts
db_schema_doc/frontend/src/lib/: applyNodeFilter.ts  graphStorage.ts  neighbors.ts  parseGraph.ts  tableSearch.ts
db_schema_doc/frontend/src/routes/: ErdRoute.tsx  (+1 more)
db_schema_doc/management/: command_utils.py
db_schema_doc/management/commands/: export_ai_schema.py  export_dbml.py  export_schema_examples.py  export_schema_json.py  generate_database_doc.py  generate_erd.py  schema_diff.py  search_schema.py
db_schema_doc/static/erd/: index.html
examples/demo_project/: README.md  manage.py
examples/demo_project/demo_project/: settings.py
examples/demo_project/shop/: models.py
tests/: conftest.py  test_ai_export.py  test_business_rules.py  test_collector.py  test_command.py  test_commands_phase1.py  test_exporters.py  test_models_meta.py  test_query_examples.py  test_schema_search.py  test_writer.py
(+15 files in other folders)
