[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "django-db-schema-doc"
version = "1.0.0"
description = "Generate DATABASE.md schema documentation for Django projects and LLM agents"
readme = "README.md"
license = "MIT"
authors = [
    { name = "iSight / MrHiB" },
]
keywords = ["django", "database", "schema", "documentation", "llm", "markdown", "introspection"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Web Environment",
    "Framework :: Django",
    "Framework :: Django :: 4.2",
    "Framework :: Django :: 5.0",
    "Framework :: Django :: 5.1",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Database",
    "Topic :: Software Development :: Documentation",
]
requires-python = ">=3.10"
dependencies = [
    "Django>=4.2",
]

[project.optional-dependencies]
dev = [
    "build>=1.0",
    "twine>=4.0",
    "ruff>=0.1",
]

[project.urls]
Homepage = "https://github.com/your-org/django-db-schema-doc"
Documentation = "https://github.com/your-org/django-db-schema-doc#readme"
Repository = "https://github.com/your-org/django-db-schema-doc"
Issues = "https://github.com/your-org/django-db-schema-doc/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["db_schema_doc*"]

[tool.setuptools.package-data]
db_schema_doc = ["py.typed"]
